--- a/css/creative.css
+++ b/css/creative.css
@@ -197,8 +197,9 @@ header .header-content .header-content-inner p {
     margin-right: auto;
   }
   header .header-content .header-content-inner p {
-    font-size: 18px;
-    max-width: 80%;
+    font-weight: 700;
+    font-size: 36px;
+    max-width: 100%;
     margin-left: auto;
     margin-right: auto;
   }
