home page updated

--- a/css/creative.css
+++ b/css/creative.css
@@ -154,7 +154,7 @@ header {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image: url('../img/hel2.jpg');
+  background-image: url('../img/netaisys24.png');
   text-align: center;
   color: white;
 }
