--- a/css/creative.css
+++ b/css/creative.css
@@ -79,10 +79,12 @@ aside {
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   font-weight: 700;
   text-transform: uppercase;
+
 }
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
   color: #eb3812;
+
 }
 .navbar-default .nav > li > a,
 .navbar-default .nav > li > a:focus {
@@ -106,7 +108,7 @@ aside {
 }
 @media (min-width: 768px) {
   .navbar-default {
-    background-color: transparent;
+    background-color: rgba(255, 255, 255, 0.6);
     border-color: rgba(255, 255, 255, 0.3);
   }
   .navbar-default .navbar-header .navbar-brand {
@@ -154,7 +156,7 @@ header {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image: url('../img/netaisys24new_.jpg');
+  background-image: url('../img/netaisys24new.jpeg');
   text-align: center;
   color: white;
 }
@@ -163,12 +165,14 @@ header .header-content {
   text-align: center;
   padding: 100px 15px 100px;
   width: 100%;
+  background: rgba(255, 255, 255, 0.4);
 }
 header .header-content .header-content-inner h1 {
   font-weight: 700;
   text-transform: uppercase;
   margin-top: 0;
   margin-bottom: 0;
+
 }
 header .header-content .header-content-inner hr {
   margin: 30px auto;
