--- a/css/creative.css
+++ b/css/creative.css
@@ -13,7 +13,7 @@ body {
   font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
 }
 hr {
-  border-color: #097969;
+  border-color: #3342b7;
   border-width: 3px;
   max-width: 50px;
 }
@@ -24,7 +24,7 @@ a {
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
-  color: #097969;
+  color: #3342b7;
 }
 a:hover,
 a:focus {
@@ -44,7 +44,7 @@ p {
   margin-bottom: 20px;
 }
 .bg-primary {
-  background-color: #097969;
+  background-color: #3342b7;
 }
 .bg-dark {
   background-color: #222222;
@@ -76,7 +76,7 @@ aside {
 
 }
 .navbar-default .navbar-header .navbar-brand {
-  color: #097969;
+  color: #3342b7;
   font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
   font-weight: 700;
   text-transform: uppercase;
@@ -96,11 +96,11 @@ aside {
 }
 .navbar-default .nav > li > a:hover,
 .navbar-default .nav > li > a:focus:hover {
-  color: #097969;
+  color: #3342b7;
 }
 .navbar-default .nav > li.active > a,
 .navbar-default .nav > li.active > a:focus {
-  color: #097969 !important;
+  color: #3342b7 !important;
   background-color: transparent;
 }
 .navbar-default .nav > li.active > a:hover,
@@ -132,7 +132,7 @@ aside {
     border-color: rgba(34, 34, 34, 0.05);
   }
   .navbar-default.affix .navbar-header .navbar-brand {
-    color: #097969;
+    color: #3342b7;
     font-size: 14px;
   }
   .navbar-default.affix .navbar-header .navbar-brand:hover,
@@ -145,7 +145,7 @@ aside {
   }
   .navbar-default.affix .nav > li > a:hover,
   .navbar-default.affix .nav > li > a:focus:hover {
-    color: #097969;
+    color: #3342b7;
   }
 }
 header {
@@ -279,7 +279,7 @@ header .header-content .header-content-inner p {
   margin: 0 auto 20px;
 }
 .text-primary {
-  color: #097969;
+  color: #3342b7;
 }
 .no-gutter > [class*='col-'] {
   padding-right: 0;
@@ -335,8 +335,8 @@ fieldset[disabled] .btn-default.active {
 }
 .btn-primary {
   color: #ffffff;
-  background-color: #097969;
-  border-color: #097969;
+  background-color: #3342b7;
+  border-color: #3342b7;
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
@@ -361,7 +361,7 @@ fieldset[disabled] .btn-default.active {
 fieldset[disabled] .btn-primary,
 .btn-primary.disabled:hover,
 .btn-primary[disabled]:hover,
-fieldset[disabled] .btn-primary:hover,
+fieldset[disabled]#097969 .btn-primary:hover,
 .btn-primary.disabled:focus,
 .btn-primary[disabled]:focus,
 fieldset[disabled] .btn-primary:focus,
@@ -374,11 +374,11 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #097969;
-  border-color: #097969;
+  background-color: #3342b7;
+  border-color: #3342b7;
 }
 .btn-primary .badge {
-  color: #097969;
+  color: #3342b7;
   background-color: #ffffff;
 }
 .btn {
