--- a/css/creative.css
+++ b/css/creative.css
@@ -154,7 +154,7 @@ header {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image: url('../img/netaisys25bis.png');
+  background-image: url('../img/bignew.png');
   text-align: center;
   color: white;
 }
@@ -163,6 +163,7 @@ header .header-content {
   text-align: center;
   padding: 100px 15px 100px;
   width: 100%;
+  background: rgba(220,220,220, 0.7);
 }
 header .header-content .header-content-inner h1 {
   font-weight: 700;
